unpackaged/main/default/objects/Contact/fields/TECH_FLOW_FONCTION__c.field-meta.xml
<CustomField>
    <fullName>TECH_FLOW_FONCTION__c</fullName>
    <description>Picklist pour flow</description>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrateur</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Directeur</fullName>
            </value>
            <value>
                <fullName>Employé</fullName>
            </value>
            <value>
                <fullName>Gérant</fullName>
            </value>
            <value>
                <fullName>Propriétaire</fullName>
            </value>
            <value>
                <fullName>Responsable</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>