unpackaged/main/default/objects/Contact/fields/TECH_ID_Piste__c.field-meta.xml
<CustomField>
    <fullName>TECH_ID_Piste__c</fullName>
    <label>TECH_ID_Piste</label>
    <length>18</length>
    <type>Text</type>
</CustomField>