unpackaged/main/default/objects/Contact/fields/TECH_SAP_Imposable__c.field-meta.xml
<CustomField>
    <fullName>TECH_SAP_Imposable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Imposable is used by SAP</description>
    <label>Imposable</label>
    <type>Checkbox</type>
</CustomField>