unpackaged/main/default/objects/Contact/fields/TECH_SAP_Language__c.field-meta.xml
<CustomField>
    <fullName>TECH_SAP_Language__c</fullName>
    <description>Mapping field with SAP. This field is updated by a flow</description>
    <label>Langue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>