unpackaged/main/default/objects/Contact/fields/TECHChatterNotification__c.field-meta.xml
<CustomField>
    <fullName>TECHChatterNotification__c</fullName>
    <formula>$Label.CON_ChatterNotif_ContactDesctive 
+ &quot;:&quot; 
+ SUBSTITUTE($Label.NewLine,&quot;-&quot;,&quot;&quot;) 
+ $Label.VFP_Contact 
+ &quot;: &quot; 
+ FirstName 
+ &quot; &quot; 
+ LastName 
+ SUBSTITUTE($Label.NewLine,&quot;-&quot;,&quot;&quot;) 
+ $Label.VFP_CompteRaisonSocial 
+ &quot;: &quot; 
+ Account.Name 
+ SUBSTITUTE($Label.NewLine,&quot;-&quot;,&quot;&quot;) 
+ $Label.VFP_Link 
+ &quot;: &quot; 
+ TECHLienSF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Chatter Notification</label>
    <type>Text</type>
</CustomField>