unpackaged/main/default/objects/Contact/fields/TECHPisteConvertie__c.field-meta.xml
<CustomField>
    <fullName>TECHPisteConvertie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Piste Convertie</label>
    <type>Checkbox</type>
</CustomField>