unpackaged/main/default/objects/Contact/fields/URLLinkedIn__c.field-meta.xml
<CustomField>
    <fullName>URLLinkedIn__c</fullName>
    <label>URL LinkedIn</label>
    <type>Url</type>
</CustomField>