unpackaged/main/default/objects/Contact/fields/Ville_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Ville_Facturation__c</fullName>
    <label>Ville (-Facturation-)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>