unpackaged/main/default/objects/Contact/fields/Ville_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Ville_Livraison__c</fullName>
    <label>Ville (-Livraison-)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>