unpackaged/main/default/objects/Contact/recordTypes/Contact_Chauffeur.recordType-meta.xml
<RecordType>
    <fullName>Contact_Chauffeur</fullName>
    <active>true</active>
    <label>Contact - Chauffeur</label>
</RecordType>