unpackaged/main/default/objects/Contact/recordTypes/Contact_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Contact_Commercial</fullName>
    <active>true</active>
    <label>Contact - Commercial</label>
</RecordType>