unpackaged/main/default/objects/Contact/recordTypes/Contact_Personnel_PF.recordType-meta.xml
<RecordType>
    <fullName>Contact_Personnel_PF</fullName>
    <active>true</active>
    <label>Contact - Personnel PF</label>
</RecordType>