unpackaged/main/default/objects/Contact/recordTypes/Contact_Responsable_de_parcs.recordType-meta.xml
<RecordType>
    <fullName>Contact_Responsable_de_parcs</fullName>
    <active>true</active>
    <label>Contact - Responsable de parcs</label>
</RecordType>