unpackaged/main/default/objects/Contact/recordTypes/Particulier_B2C.recordType-meta.xml
<RecordType>
    <fullName>Particulier_B2C</fullName>
    <active>true</active>
    <description>Contact B2C</description>
    <label>Particulier (B2C)</label>
</RecordType>