unpackaged/main/default/objects/Contact/validationRules/VR_Contact_B2Conly.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact_B2Conly</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Account.RecordType.DeveloperName = &quot;Particulier_B2C&quot;,
RecordType.DeveloperName &lt;&gt; &quot;Particulier_B2C&quot;
)</errorConditionFormula>
    <errorMessage>Un contact créé sur un compte de type particulier doit également être particulier</errorMessage>
</ValidationRule>