unpackaged/main/default/objects/Contact/validationRules/VR_Contact_Commercial_FirstNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact_Commercial_FirstNameRequired</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    AND(RecordType.Name = &quot;Contact - Commercial&quot;, ISBLANK(FirstName), $Profile.Name&lt;&gt;&quot;PF Administrateur Système&quot;), 
    TRUE, 
    FALSE
)</errorConditionFormula>
    <errorMessage>Le champ Prénom doit être renseigné</errorMessage>
</ValidationRule>