unpackaged/main/default/objects/Contact/validationRules/VR_MobilePhoneLength.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_MobilePhoneLength</fullName>
    <active>true</active>
    <description>Le numéro de téléphone doit être composé de moins de 30 chiffres.</description>
    <errorConditionFormula>NOT(REGEX(MobilePhone, &quot;^[+0-9 ]{0,30}$&quot;))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Le numéro de téléphone doit être composé de moins de 30 chiffres.</errorMessage>
</ValidationRule>