unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>Fonction__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>1- Tous / All</label>
</ListView>