unpackaged/main/default/objects/Contact/listViews/B2CContacts.listView-meta.xml
<ListView>
    <fullName>B2CContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Particulier_B2C</value>
    </filters>
    <label>B2C Contacts</label>
</ListView>