unpackaged/main/default/objects/Contact/listViews/Test_Contacts_FFF.listView-meta.xml
<ListView>
    <fullName>Test_Contacts_FFF</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/30/2023 12:00 AM</value>
    </filters>
    <label>Test - Contacts FFF</label>
</ListView>